--- a/src/app/pages/admin/areas-crud/areas-crud.component.html
+++ b/src/app/pages/admin/areas-crud/areas-crud.component.html
@@ -1,14 +1,54 @@
 <div class="d-flex" id="wrapper">
 
-    <!-- Sidebar -->
-    <app-sidebar></app-sidebar>
-  
-    <!-- Contenido de la pagina -->
-    <div id="page-content-wrapper">
-      <!-- Botón para cerrar el sidebar -->
-      
-      <div class="container-fluid">
-        
+  <!-- Sidebar -->
+  <app-sidebar></app-sidebar>
+
+  <!-- Contenido de la pagina -->
+  <div id="page-content-wrapper">
+    <!-- Botón para cerrar el sidebar -->
+
+    <div class="container-fluid">
+      <div class="row my-5">
+        <div class="col">
+          <div class="card w-100 mb-4 shadow">
+            <div class="card-header bg-info">
+              <div class="d-flex align-items-center">
+                <h2 class="card-title text-white font-weight-bold my-2 mr-3">Ciclos</h2>
+              </div>
+              <a class="rounded-circle position-absolute border border-white bg-info" (click)=newArea()>
+                <svg class="bi text-white" width="32" height="32" fill="currentColor">
+                  <use xlink:href="bootstrap-icons.svg#plus" />
+                </svg>
+              </a>
+            </div>
+            <div class="card-body mt-2">
+              <div class="row">
+                <div class="col-12" *ngFor="let area of areas">
+                  <div class="card m-2 mb-4 border-info shadow">
+                    <div class="card-body row">
+                      <div class="col-8 my-auto">
+                        {{area.description}}
+                      </div>
+                      <div class="col-4 btn-group">
+                        <button type="button" title="Editar ciclo" class="btn btn-info rounded-0">
+                          <svg class="bi" width="20" height="20" fill="currentColor" (click)=areaUpdate(area)>
+                            <use xlink:href="bootstrap-icons.svg#pencil" />
+                          </svg>
+                        </button>
+                        <button type="button" title="Eliminar ciclo" class="btn btn-danger rounded-0">
+                          <svg class="bi" width="20" height="20" fill="currentColor" (click)=areaDelete(area.id)>
+                            <use xlink:href="bootstrap-icons.svg#x" />
+                          </svg>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+</div>
