--- a/src/app/pages/admin/users-crud/users-crud.component.html
+++ b/src/app/pages/admin/users-crud/users-crud.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <app-load-spinner *ngIf="loaded==false"></app-load-spinner>
-    <div *ngIf="loaded" class="row">
+    <div *ngIf="loaded" class="row my-5">
         <div class="col">
             <div class="card w-100 mb-4 shadow">
                 <div class="card-header bg-info">
