--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,7 +1,7 @@
 @import "../../../styles.scss";
 
 .footerBot{
-background-color:$secondary-light;
+background-color:$secondary;
   h5{
     color:blue;
   }
