--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -1,6 +1,8 @@
-<app-navbar>
-</app-navbar>
+<div id="themeChanger" class="">
+    <app-navbar>
+    </app-navbar>
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 
-<app-footer></app-footer>
+    <app-footer></app-footer>
+</div>
