--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -45,7 +45,7 @@
     <div class="footerBot row pt-4 pb-3">
         <!--Grid column-->
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0 text-right">
-            <h5 class="text-center widget-title">Contacto</h5>
+            <h5 class="text-center widget-title text-primary">Contacto</h5>
             <hr>
             <ul class="text-left list-unstyled mb-0">
                 <li class="address">
