--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,40 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 
+
 /* Contenedor del contenido de la parte intentar de la web */
+
 #page-content-wrapper {
     width: 100%;
 }
+
+@import "styles-light.scss";
+@import "styles-dark.scss";
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
 
-$primary: #007a7a;
-$primary-dark: #003f5a;
-$secondary:  #fea02f;
-$secondary-light: #abb5be;
-$secondary-dark: #667584;
-$success: #28a745;
-$info: #de6600;
-$warning: #ffc107;
-$danger: #dc3545;
-$light: #ebd9c8;
-$dark: black;
-
-.bg-primary{
-  background-color: $primary !important;
+@import "../node_modules/bootstrap/scss/bootstrap";
+.btn-primary {
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
 }
 
-.bg-secondary {
-    background-color: $secondary !important;
-}
-.btn-primary{
-  background-color: $info !important;
-     color: white;
-            font-weight: bold;
-            font-size: 20px;
-}
-.bg-light{
- background-color: $light !important;
-}
-body{
-  background-color: $light !important;
+body {
+    background-color: $light !important;
 }
