Tema principal primera implementación

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -21,7 +21,7 @@
         <hr class="my-4">
         <p>Somos un centro integrado de formacion profesional con un amplico catalogo de estudios .</p>
         <p class="lead">
-            <a class="btn btn-lg btn-primary " href="https://cifpvirgendegracia.com/titulaciones/" role="button">Oferta educativa</a>
+            <a class="btn btn-lg btn-info " href="https://cifpvirgendegracia.com/titulaciones/" role="button">Oferta educativa</a>
         </p>
     </div>
 </div>
