--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,12 +1,12 @@
 @import "../../../styles.scss";
 
 .footerBot{
-background-color:$secondary;
+background-color:$light;
   h5{
-    color:blue;
+    color: $primary;
   }
   a{
-    color:yellow;
+    color: $dark;
   }
 
 }
