--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="bg-light border-right" id="sidebar-wrapper">
     <!-- Profile image -->
-    <div class="sidebar-img border-bottom bg-info d-flex flex-column align-items-center">
+    <div class="sidebar-img border-bottom bg-primary d-flex flex-column align-items-center">
         <img src="/assets/img_profile.jpeg" alt="imagen_perfill" class="rounded-circle" width="80px">
         <p class="font-weight-bold text-white pt-1 mb-0">Luis Quesada</p>
     </div>
