--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
         <div class="card">
-            <div class="card-header  bg-info ">
+            <div class="card-header  bg-secondary ">
                 <h2 class="card-title text-white mb-0">Acceso</h2>
             </div>
             <div class="card-body">
