--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -50,18 +50,18 @@
             <ul class="text-left list-unstyled mb-0">
                 <li class="address">
                     <a  href="https://goo.gl/maps/X8EjExU2P4bZKCAS7" title="Paseo de San Gregorio, 82-84. 13500 Puertollano (Ciudad Real)." onclick="javascript:window.open('https://goo.gl/maps/X8EjExU2P4bZKCAS7'); return false;">
-                        <svg class="ml-1 bi text-info" width="16" height="16" fill="currentColor">
+                        <svg class="ml-1 bi text-secondary" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#geo-alt" />
                             </svg>Paseo de San Gregorio, 82-84.<br> 13500 Puertollano <br>(Ciudad Real).</a>
                 </li>
-                <li class="mt-3 phone-number"><a href="tel:926426250" title="926 42 62 50"><svg class="ml-1 bi text-info" width="16" height="16" fill="currentColor">
+                <li class="mt-3 phone-number"><a href="tel:926426250" title="926 42 62 50"><svg class="ml-1 bi text-secondary" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#telephone" />
                             </svg>926 42 62 50</a></li>
-                <li class="mt-3 phone-number"><a  href="tel:926426251" title="926 42 62 51"><svg class="ml-1 bi text-info" width="16" height="16" fill="currentColor">
+                <li class="mt-3 phone-number"><a  href="tel:926426251" title="926 42 62 51"><svg class="ml-1 bi text-secondary" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#telephone" />
                             </svg>926 42 62 51</a></li>
                 <li class="mt-3 email">
-                    <a  href="mailto:secretaria@cifpvirgendegracia.com" title=""> <svg class="ml-1 bi text-info" width="16" height="16" fill="currentColor">
+                    <a  href="mailto:secretaria@cifpvirgendegracia.com" title=""> <svg class="ml-1 bi text-secondary" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#envelope-fill" />
                             </svg> secretaria@cifpvirgendegracia.com</a>
                 </li>
