--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,14 +1,14 @@
 <footer class="container-fluid">
     <div class="bg-primary row text-light bold">
         <div class="mx-auto pt-3  ">
-        © 2021
-         <a class="text-light bold" alt="CIFP Virgen de Gracia" title="CIFP Virgen de Gracia" target="_blank" href="https://bolsatrabajo.com/">CIFP Virgen de Gracia</a>
+            © 2021
+            <a class="text-light bold footerLink" alt="CIFP Virgen de Gracia" title="CIFP Virgen de Gracia" target="_blank" href="https://bolsatrabajo.com/">CIFP Virgen de Gracia</a>
         </div>
         <!-- Redes sociales -->
         <ul class="list-inline align-content-md-start pr-2 pt-3">
             <!-- twitter -->
             <li class="list-inline-item">
-                <a class="" rel="noopener" alt="twitter"  href="https://twitter.com/cifpvirgen" onclick="javascript:window.open('https://twitter.com/cifpvirgen'); return false;"><span class="screen-reader-text">
+                <a class="" rel="noopener" alt="twitter" href="https://twitter.com/cifpvirgen" onclick="javascript:window.open('https://twitter.com/cifpvirgen'); return false;"><span class="screen-reader-text">
                   <svg class="ml-1 mr-2 bi text-light" width="15" height="15" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#twitter"/>
                   </svg></span></a></li>
@@ -49,7 +49,7 @@
             <hr>
             <ul class="text-left list-unstyled mb-0">
                 <li class="address">
-                    <a  href="https://goo.gl/maps/X8EjExU2P4bZKCAS7" title="Paseo de San Gregorio, 82-84. 13500 Puertollano (Ciudad Real)." onclick="javascript:window.open('https://goo.gl/maps/X8EjExU2P4bZKCAS7'); return false;">
+                    <a href="https://goo.gl/maps/X8EjExU2P4bZKCAS7" title="Paseo de San Gregorio, 82-84. 13500 Puertollano (Ciudad Real)." onclick="javascript:window.open('https://goo.gl/maps/X8EjExU2P4bZKCAS7'); return false;">
                         <svg class="ml-1 bi text-secondary" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#geo-alt" />
                             </svg>Paseo de San Gregorio, 82-84.<br> 13500 Puertollano <br>(Ciudad Real).</a>
@@ -57,11 +57,11 @@
                 <li class="mt-3 phone-number"><a href="tel:926426250" title="926 42 62 50"><svg class="ml-1 bi text-secondary" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#telephone" />
                             </svg>926 42 62 50</a></li>
-                <li class="mt-3 phone-number"><a  href="tel:926426251" title="926 42 62 51"><svg class="ml-1 bi text-secondary" width="16" height="16" fill="currentColor">
+                <li class="mt-3 phone-number"><a href="tel:926426251" title="926 42 62 51"><svg class="ml-1 bi text-secondary" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#telephone" />
                             </svg>926 42 62 51</a></li>
                 <li class="mt-3 email">
-                    <a  href="mailto:secretaria@cifpvirgendegracia.com" title=""> <svg class="ml-1 bi text-secondary" width="16" height="16" fill="currentColor">
+                    <a href="mailto:secretaria@cifpvirgendegracia.com" title=""> <svg class="ml-1 bi text-secondary" width="16" height="16" fill="currentColor">
                                 <use xlink:href="bootstrap-icons.svg#envelope-fill" />
                             </svg> secretaria@cifpvirgendegracia.com</a>
                 </li>
