--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,27 +1,67 @@
 <!-- Header -->
-<div class="container-fluid  pt-3 zindex-dropdown ">
-    <div class="carousel slide carousel-fade" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="/assets/front.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="/assets/oferta.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="/assets/elearning.jpg" class="d-block w-100" alt="...">
-            </div>
+<div class="container-fluid  pt-3 zindex-dropdown about-us py-5 bg-light-dark ">
+    <div class="row">
+        <div class="text-white bold col-md-6 ml-3 mb-4">
+            <h1 class='text-success'>Bienvenido!</h1>
+            <h2>CIFP Virgen de Gracia</h2>
+            <hr>
+            <p>Ofrecemos ofertas de empleo y visivilidad a todos los alumnos de CIFP Virgen de Gracia.</p>
+            <p>Somos un centro integrado de formacion profesional con un amplico catalogo de estudios .</p>
+            <button type="button" class="btn btn-secondary"><a href="https://cifpvirgendegracia.com/titulaciones/" >Oferta educativa</a></button>
         </div>
-
+        <div class="col-md-5">
+            <img src="../../assets/jobs.png " alt=" Imagen decorativa">
+        </div>
     </div>
+</div>
+<div class="jumbotron">
     <!-- Info -->
-    <div class="jumbotron  jumbotron-fluid p-5 mb-0">
-        <h1 class="display-4">Bolsa de trabajo</h1>
-        <p class="lead">Ofrecemos ofertas de empleo y visivilidad a todos los alumnos de CIFP Virgen de Gracia.</p>
-        <hr class="my-4">
-        <p>Somos un centro integrado de formacion profesional con un amplico catalogo de estudios .</p>
-        <p class="lead">
-            <a class="btn btn-lg btn-info " href="https://cifpvirgendegracia.com/titulaciones/" role="button">Oferta educativa</a>
-        </p>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-8 col-lg-6 ">
+            <!--Form with header-->
+            <form method="post">
+                <div class="card border-primary rounded-0">
+                    <div class="card-header p-0">
+                        <div class="bg-info text-white text-center py-2">
+                            <h3><i class="fa fa-envelope"></i> Contactanos</h3>
+                            <p class="m-0">Con gusto te ayudaremos</p>
+                        </div>
+                    </div>
+                    <div class="card-body p-3">
+                        <!--Body-->
+                        <div class="form-group">
+                            <div class="input-group mb-2">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
+                                </div>
+                                <label for="nombre">
+                                <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre y Apellido" required>
+                            </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group mb-2">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
+                                </div>
+                                <input type="email" class="form-control" id="nombre" name="email" placeholder="ejemplo@gmail.com" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group mb-2">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
+                                </div>
+                                <textarea class="form-control" placeholder="Envianos tu Mensaje" required></textarea>
+                            </div>
+                        </div>
+                        <div class="text-center">
+                            <input type="submit" value="Enviar" class="text-white btn btn-info btn-block rounded-0 ">
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <!--Form with header-->
+        </div>
     </div>
 </div>
