--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,7 +1,6 @@
 @import "../../../styles.scss";
-.carousel-item {
-    height: 50vh;
-    min-height: 300px;
-    background: no-repeat center center scroll;
-    background-size: cover;
+a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
 }
