--- a/src/app/pages/admin/areas-crud/areas-crud.component.html
+++ b/src/app/pages/admin/areas-crud/areas-crud.component.html
@@ -8,7 +8,8 @@
     <!-- Botón para cerrar el sidebar -->
 
     <div class="container-fluid">
-      <div class="row my-5">
+      <app-load-spinner *ngIf="loaded==false"></app-load-spinner>
+      <div class="row my-5" *ngIf="loaded==true">
         <div class="col">
           <div class="card w-100 mb-4 shadow">
             <div class="card-header bg-info">
