--- a/src/app/pages/admin/areas-crud/modal/area-new/area-new.component.html
+++ b/src/app/pages/admin/areas-crud/modal/area-new/area-new.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header bg-info text-white">
-    <h4 class="modal-title" id="modal-basic-title">Modificar oferta</h4>
+    <h4 class="modal-title" id="modal-basic-title">Añadir ciclo</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.close('Cross click')">
         <svg class="bi text-white" width="32" height="32" fill="currentColor">
             <use xlink:href="bootstrap-icons.svg#x" />
@@ -14,13 +14,8 @@
                 <input type="text" class="form-control" formControlName="nombre" [class]="isValidField('nombre')"
                     aria-label="Nombre area">
                 <div class="invalid-feedback">
-                    <span *ngIf="areaForm.get('areaForm').errors?.required">
+                    <span *ngIf="areaForm.get('nombre').errors?.required">
                         Por favor introduzca un area
-                    </span>
-                </div>
-                <div class="invalid-feedback">
-                    <span *ngIf="areaForm.get('email').errors?.pattern">
-                        Por favor introduzca su solo texto
                     </span>
                 </div>
             </div>
