--- a/src/app/pages/admin/users-crud/modal/user-update/user-update.component.html
+++ b/src/app/pages/admin/users-crud/modal/user-update/user-update.component.html
@@ -1,18 +1,18 @@
 <div class="modal-header bg-info text-white">
-    <h4 class="modal-title" id="modal-basic-title">Modificar oferta</h4>
+    <h4 class="modal-title" id="modal-basic-title">Modificar usuario</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.close('Cross click')">
-      <svg class="bi text-white" width="32" height="32" fill="currentColor">
-        <use xlink:href="bootstrap-icons.svg#x" />
-      </svg>
+        <svg class="bi text-white" width="32" height="32" fill="currentColor">
+            <use xlink:href="bootstrap-icons.svg#x" />
+        </svg>
     </button>
-  </div>
-  <div class="modal-body">
+</div>
+<div class="modal-body">
     <form [formGroup]="registerForm" novalidate (ngSubmit)="onSubmit()" class="mt-4 mb-4" method="POST">
         <div class="form-row">
             <div class="form-group col-10 col-sm-8 mx-auto">
                 <label>E-mail:</label>
-                <input type="email" class="form-control" formControlName="email"
-                    [class]="isValidField('email')" aria-label="Email para registro">
+                <input type="email" class="form-control" formControlName="email" [class]="isValidField('email')"
+                    aria-label="Email nuevo">
                 <div class="invalid-feedback">
                     <span *ngIf="registerForm.get('email').errors?.required">
                         Por favor introduzca su E-mail
@@ -29,8 +29,8 @@
             <div class="form-group col-10 col-sm-8 mx-auto">
                 <label>Contraseña:</label>
                 <input type="password" class="form-control" formControlName="password"
-                    [class]="isValidField('password')" aria-label="Contraseña deseada">
-                <div class="invalid-feedback" >
+                    [class]="isValidField('password')" aria-label="Contraseña nueva">
+                <div class="invalid-feedback">
                     <span *ngIf="registerForm.get('password').errors?.required">
                         Por favor introduzca su contraseña.
                     </span>
@@ -41,18 +41,15 @@
                     </span>
                 </div>
             </div>
-        </div>        
-        <div class="text-right">            
+        </div>
+        <div class="text-right">
             <button type="submit " class="btn btn-info">
                 Guardar
                 <svg class="bi text-white" width="14" height="14" fill="currentColor">
                     <use xlink:href="bootstrap-icons.svg#save" />
                 </svg>
-            </button>            
+            </button>
         </div>
     </form>
-  
-  </div>
-  
-  
-  
+
+</div>
