Apuntarse a oferta funcional
Al alumno en apartado ofertas solo se le muestran las ofertas en las que no está apuntado

--- a/src/app/pages/alumno/student-offer/student-offer.component.html
+++ b/src/app/pages/alumno/student-offer/student-offer.component.html
@@ -22,7 +22,7 @@
                     <div class="card w-100 mb-4 shadow">
                         <div class="card-header bg-info">
                             <div class="d-flex align-items-center">
-                                <h2 class="card-title text-white font-weight-bold my-2 mr-3">Mis ofertas</h2>
+                                <h2 class="card-title text-white font-weight-bold my-2 mr-3">Ofertas activas</h2>
                             </div>
                         </div>
                         <div class="card-body mt-2">
