Arreglos de algunos estilos a causa del merge

--- a/src/app/pages/alumno/perfil/perfil-al.component.html
+++ b/src/app/pages/alumno/perfil/perfil-al.component.html
@@ -116,5 +116,5 @@
             </span>
         </div>
     </div>
-    <button *ngIf="router.url === '/alumno/perfil'" type="submit" class="btn btn-primary col-md-6">Confirmar</button>
+    <button *ngIf="router.url === '/alumno/perfil'" type="submit" class="btn btn-secondary col-md-6">Confirmar</button>
 </form>
