--- a/src/app/pages/company/crear-perfil/crear-perfil.component.html
+++ b/src/app/pages/company/crear-perfil/crear-perfil.component.html
@@ -78,5 +78,5 @@
             </div>
         </div>
     </div>
-    <button *ngIf="router.url === '/empresa/perfil'" type="submit" class="btn btn-primary col-md-6">Confirmar</button>
+    <button *ngIf="router.url === '/empresa/perfil'" type="submit" class="btn btn-secondary col-md-6">Confirmar</button>
 </form>
