--- a/src/app/pages/company/studens-view/studens-view.component.html
+++ b/src/app/pages/company/studens-view/studens-view.component.html
@@ -4,27 +4,21 @@
     <app-sidebar></app-sidebar>
 
     <!-- Page Content -->
-    <div id="page-content-wrapper">
-        <!-- Button close Sidebar -->
-        <a class="btn" id="menu-toggle">
-            <svg class="bi text-info" width="32" height="32" fill="currentColor">
-        <use xlink:href="bootstrap-icons.svg#grid-3x3-gap" />
-      </svg>
-        </a>
-        <div class="container-fluid">
+    <div id="page-content-wrapper">        
+        <div class="container-fluid my-5">
             <div class="row">
                 <div class="col">
                     <!-- Card with offer -->
                     <div class="card w-100 mb-4 shadow">
-                        <div class="card-header bg-info">
+                        <div class="card-header bg-secondary">
                             <h2 class="card-title text-white font-weight-bold my-2">Alumnos</h2>
                         </div>
                         <div class="card-body mt-2">
                             <!-- Card with offer -->
                             <div class="row">
                                 <div class="col-sm-6" *ngFor="let Alumno of [0,1,2,3,4,5,6,7]">
-                                    <div class="card mb-4 border-info shadow">
-                                        <div class="card-header bg-info text-white">
+                                    <div class="card mb-4 border-secondary shadow">
+                                        <div class="card-header bg-secondary text-white">
                                             <h5 class="card-title mb-0">Nombre del Alumno</h5>
                                         </div>
                                         <div class="card-body">
