--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header  bg-secondary ">
+                <div class="card-header bg-secondary ">
                     <h2 class="card-title text-white mb-0">Acceso</h2>
                 </div>
                 <div class="card-body">
@@ -27,7 +27,7 @@
                         </div>
 
                         <div class="text-right">
-                            <button type="submit" class="btn btn-info text-white mr-2">
+                            <button type="submit" class="btn btn-secondary text-white mr-2">
                           Enviar
                           <svg class="bi text-white" width="14" height="14" fill="currentColor">
                             <use xlink:href="bootstrap-icons.svg#save" />
