--- a/src/app/pages/admin/areas-crud/areas-crud.component.html
+++ b/src/app/pages/admin/areas-crud/areas-crud.component.html
@@ -12,11 +12,11 @@
       <div class="row my-5" *ngIf="loaded==true">
         <div class="col">
           <div class="card w-100 mb-4 shadow">
-            <div class="card-header bg-info">
+            <div class="card-header bg-secondary">
               <div class="d-flex align-items-center">
                 <h2 class="card-title text-white font-weight-bold my-2 mr-3">Ciclos</h2>
               </div>
-              <a class="rounded-circle position-absolute border border-white bg-info" (click)=newArea()>
+              <a class="rounded-circle position-absolute border border-white bg-secondary" (click)=newArea() title="Añadir ciclo">
                 <svg class="bi text-white" width="32" height="32" fill="currentColor">
                   <use xlink:href="bootstrap-icons.svg#plus" />
                 </svg>
@@ -25,13 +25,13 @@
             <div class="card-body mt-2">
               <div class="row">
                 <div class="col-12" *ngFor="let area of areas">
-                  <div class="card m-2 mb-4 border-info shadow">
+                  <div class="card m-2 mb-4 border-secondary shadow">
                     <div class="card-body row">
                       <div class="col-8 my-auto">
                         {{area.description}}
                       </div>
                       <div class="col-4 btn-group">
-                        <button type="button" title="Editar ciclo" class="btn btn-info rounded-0">
+                        <button type="button" title="Editar ciclo" class="btn btn-secondary rounded-0">
                           <svg class="bi" width="20" height="20" fill="currentColor" (click)=areaUpdate(area)>
                             <use xlink:href="bootstrap-icons.svg#pencil" />
                           </svg>
