--- a/src/app/pages/admin/users-crud/users-crud.component.html
+++ b/src/app/pages/admin/users-crud/users-crud.component.html
@@ -3,7 +3,7 @@
     <div *ngIf="loaded" class="row my-5">
         <div class="col">
             <div class="card w-100 mb-4 shadow">
-                <div class="card-header bg-info">
+                <div class="card-header bg-secondary">
                     <div class="d-flex align-items-center">
                         <h2 class="card-title text-white font-weight-bold my-2 mr-3">Usuarios</h2>
                     </div>
@@ -11,11 +11,11 @@
                 <div class="card-body mt-2">
                     <div class="row">
                         <div class="col-sm-12 col-md-6" *ngFor="let user of users">
-                            <div class="card m-2 mb-4 border-info shadow">
+                            <div class="card m-2 mb-4 border-secondary shadow">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="text-info">
+                                            <p class="text-secondary">
                                                 Usuario {{user.id}}
                                             </p>
                                             <p class="card-text">
@@ -32,7 +32,7 @@
                                 </div>
                                 <div class="card-footer p-0">
                                     <div class="btn-group w-100">
-                                        <button type="button" title="Editar usuario" class="btn btn-info rounded-0">
+                                        <button type="button" title="Editar usuario" class="btn btn-secondary rounded-0">
                                             <svg class="bi" width="26" height="26" fill="currentColor"
                                                 (click)=userUpdate(user)>
                                                 <use xlink:href="bootstrap-icons.svg#pencil" />
