--- a/src/app/pages/alumno/student-dashboard/student-dashboard.component.html
+++ b/src/app/pages/alumno/student-dashboard/student-dashboard.component.html
@@ -4,15 +4,9 @@
     <app-sidebar></app-sidebar>
 
     <!-- Page Content -->
-    <div id="page-content-wrapper">
-        <!-- Button close Sidebar -->
-        <a class="btn" id="menu-toggle">
-            <svg class="bi text-info" width="32" height="32" fill="currentColor">
-                <use xlink:href="bootstrap-icons.svg#grid-3x3-gap" />
-            </svg>
-        </a>
+    <div id="page-content-wrapper">        
 
-        <div class="container-fluid">
+        <div class="container-fluid my-5">
             <h1 class="mt-4">Dashboard Alumno</h1>
             <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on
                 larger screens. When toggled using the button below, the menu will change.</p>
