--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -22,7 +22,7 @@
             <form method="post">
                 <div class="card border-primary rounded-0">
                     <div class="card-header p-0">
-                        <div class="bg-info text-white text-center py-2">
+                        <div class="bg-secondary text-white text-center py-2">
                             <h3><i class="fa fa-envelope"></i> Contactanos</h3>
                             <p class="m-0">Con gusto te ayudaremos</p>
                         </div>
@@ -31,18 +31,18 @@
                         <!--Body-->
                         <div class="form-group">
                             <div class="input-group mb-2">
-                                <div class="input-group-prepend">
-                                    <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
-                                </div>
-                                <label for="nombre">
-                                <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre y Apellido" required>
+                            <label for="nombre">
                             </label>
+                            <div class="input-group-prepend">
+                                <div class="input-group-text"><i class="fa fa-user text-secondary"></i></div>
+                            </div>
+                            <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre y Apellido" required>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group mb-2">
                                 <div class="input-group-prepend">
-                                    <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
+                                    <div class="input-group-text"><i class="fa fa-envelope text-secondary"></i></div>
                                 </div>
                                 <input type="email" class="form-control" id="nombre" name="email" placeholder="ejemplo@gmail.com" required>
                             </div>
@@ -50,13 +50,13 @@
                         <div class="form-group">
                             <div class="input-group mb-2">
                                 <div class="input-group-prepend">
-                                    <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
+                                    <div class="input-group-text"><i class="fa fa-comment text-secondary"></i></div>
                                 </div>
                                 <textarea class="form-control" placeholder="Envianos tu Mensaje" required></textarea>
                             </div>
                         </div>
                         <div class="text-center">
-                            <input type="submit" value="Enviar" class="text-white btn btn-info btn-block rounded-0 ">
+                            <input type="submit" value="Enviar" class="text-white btn btn-secondary btn-block rounded-0 ">
                         </div>
                     </div>
                 </div>
