--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -5,7 +5,7 @@
     <div class="row justify-content-center">
         <div class="col-10">
             <div class="card">
-                <div class="card-header  bg-info ">
+                <div class="card-header bg-secondary ">
                     <h1 class="card-title text-white mb-0">Registro</h1>
                 </div>
                 <div class="card-body"></div>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-12 col-sm-8 col-md-4 mx-auto" *ngIf="registerForm.get('condicion').value !=''"
                         [@inOutAnimation]>
-                        <button type="submit " class="btn btn-primary btn-block ">Registrarse</button>
+                        <button type="submit " class="btn btn-secondary btn-block ">Registrarse</button>
                     </div>
                 </form>
             </div>
