--- a/src/styles-light.scss
+++ b/src/styles-light.scss
@@ -9,15 +9,17 @@ $dark: black;
 
 $link-color: blue;
 
+.card-footer {
+    overflow: hidden;
+}
+
 app-root #themeChanger.light {
   
-    .btn.btn-primary,
-    .btn.btn-secondary {      
+    .btn.btn-primary{      
         border: 3px solid #fff;
     }
 
-    .btn {
-        border-radius: 10px;
+    .btn {        
         transition: all ease 0.2s;
     }
 
