--- a/src/app/pages/company/crear-perfil/crear-perfil.component.html
+++ b/src/app/pages/company/crear-perfil/crear-perfil.component.html
@@ -1,4 +1,4 @@
-<form novalidate class="mt-4 mb-4" (ngSubmit)="onSave()" [formGroup]="companyInfoForm">
+<form novalidate class="mb-4" (ngSubmit)="onSave()" [formGroup]="companyInfoForm">
     <div class="form-row">
         <div class="form-group col-md-6">
             <label>CIF:</label>
